--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <p>....</p>
 
 <iframe src="https://moxrathore.tech" height="800" width="600" title="CDN"></iframe>
-
+<footer class="watermark">
+<a href="https://moxrathore.com" target="_blank" rel="noopener" class="watermark-link" aria-label="Made with By MOX RATHORE ">
+Made with ❤️ by <span class="unfold">MOX RATHORE</span>
+</a>
+</footer>
 </body>
 </html>
