--- a/music/mmc.html
+++ b/music/mmc.html
@@ -41,6 +41,8 @@
     </style>
   </head>
   <body>
+    <audio loop hidden id="audio" src="https://cdn.moxrathore.com/music/a1.mp3"></audio>
+<a class="rope" style="text-decoration:none;" href="#" onclick="play()"><br><br><br><br><br>
   <audio src="https://cdn.moxrathore.com/music/music.mp3" autoplay="true"></audio>
     <h1>Coming Soon</h1>
     <p>Our website is under construction, but we'll be here soon with our new awesome site.</p>
