--- a/CID/main.html
+++ b/CID/main.html
@@ -134,7 +134,7 @@ button:hover {
 </head>
 <body>
     <audio id="bgMusic" autoplay loop> 
-        <source src="ThemeSong.mp3" type="audio/mpeg">
+        <source src="https://cdn.moxrathore.com/CID/ThemeSong.mp3" type="audio/mpeg">
         Your browser does not support this audio element
     </audio>
     
